# coinws

./: LICENSE  README.md  pyproject.toml
src/coinws/: __init__.py  client.py  easy.py  gateway.py  types.py  utils.py
src/coinws/exchanges/: __init__.py  base.py  binance.py  gate.py  okx.py
tests/: test_binance_trades_live.py
